--- a/src/components/ui/cards/massageBlock/massage-block.module.scss
+++ b/src/components/ui/cards/massageBlock/massage-block.module.scss
@@ -14,7 +14,7 @@
     display: flex;
     position: relative;
     margin-left: 0;
-    width: 30%;
+    width: 40%;
     height: 60vh;
     min-width: 350px;
     @media screen and (min-width: 1550px) {
@@ -91,12 +91,18 @@
       flex-direction: column;
 
       li {
+        display: flex;
         list-style: none;
         font-size: 1.6em;
         margin-left: 1rem;
-
+        p{
+          margin-left: 1rem;
+        }
         &::before {
-          content: "→ ";
+          content: "→";
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
     }
@@ -115,15 +121,24 @@
         min-width: 200px;
 
         .prices__list {
+            display: flex;
+            flex-direction: column;
           font-size: 1.6em;
           margin-bottom: 1.2rem;
-
           li {
+            display: flex;
             list-style: none;
             margin-top: 0;
+        p{
+          margin-left: 1rem;
+        }
 
             &:before {
-              content: "→ ";
+              content: "→";
+              display: flex;
+          justify-content: center;
+          align-items: center;
+
             }
           }
         }
@@ -140,10 +155,11 @@
           font-size: 1.6em;
 
           li {
+            display: flex;
             list-style: none;
             margin-top: 0;
             position: relative;
-            padding-left: 1em;
+            padding-left: 2.7rem;
 
             &::before {
               content: "";
@@ -151,7 +167,7 @@
               height: 10px;
               background-color: rgb(243, 181, 239);
               position: absolute;
-              left: 0;
+              left: 5%;
               top: 50%;
               transform: translateY(-50%);
             }
