--- a/src/components/ui/cards/gallery/gallery.module.scss
+++ b/src/components/ui/cards/gallery/gallery.module.scss
@@ -4,9 +4,7 @@
   padding: 0 20px;
   width: 100%;
   height: 100%;
-  //@media (max-width: 425px) {
-  //  width: 80%;
-  //}
+
   @media (max-width: 660px) {
     padding: 0;
   }
@@ -33,13 +31,13 @@
 
 
 .gallery:hover {
-  .arrowLeft,
-  .arrowRight {
+  .arrow__left,
+  .arrow__right {
     opacity: 1;
   }
 }
 
-.mainImageWrapper {
+.main_image__wrapper {
   position: relative;
   width: 100%;
   height: 100%;
@@ -59,7 +57,7 @@
   }
 }
 
-.imageBlurBackground {
+.image_blur__background {
   position: absolute;
   top: 0;
   left: 0;
@@ -74,7 +72,7 @@
 
 }
 
-.mainImage {
+.main__image {
   object-fit: cover !important;
   padding: 20px;
   -webkit-user-drag: none;
@@ -85,8 +83,8 @@
 }
 
 
-.arrowLeft,
-.arrowRight {
+.arrow__left,
+.arrow__right {
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -119,11 +117,11 @@
   }
 }
 
-.arrowLeft {
+.arrow__left {
   left: 20px !important;
 }
 
-.arrowRight {
+.arrow__right {
   right: 20px !important;
 }
 
@@ -147,7 +145,7 @@
   }
 }
 
-.modalContent {
+.modal__content {
   position: relative;
   width: 100%;
   height: 90%;
@@ -168,7 +166,7 @@
 
 }
 
-.closeButton {
+.close__button {
   z-index: 1001;
   pointer-events: auto !important;
   position: absolute;
@@ -192,7 +190,7 @@
   }
 }
 
-.modalGallery {
+.modal__gallery {
   height: 100%;
   position: relative;
 
